# tootep

./: .gitignore  .gitmodules  CMakeLists.txt  Justfile  LICENSE  README.md
include/tootep/: core.h  error.h  types.h
src/: core.cpp
tests/: CMakeLists.txt  test_core.cpp
